@@ -3,6 +3,10 @@ ChangeLog for ARQ
 
 ==== ARQ 2.8.1
 
++ Bug fixes
+   + substiution in NOT EXISTS
+   + constant folding and logical special forms
+
 + Speed up processing of nested optionals.  Greatly speeds up BSBM with TDB.
 
 + Some JMX management exposed: Object names start "com.hp.hpl.jena.sparql". 
